# code

./: .flake8  README.md  app.nix  default.nix  flake.nix  home-module.nix  overlay.nix  pyproject.toml
code-cli/: .flake8  default.nix  pyproject.toml  shell.nix
code-cli/code_cli/: cli.py  code.py  code_repo.py  config.py  constants.py  dev_files.py  dev_repo.py  git.py
code-cli/tests/: test_code_repo.py  test_config_file.py  test_dev_files.py  test_dev_repo.py  test_e2e.py
pkgs/code-cli/: default.nix  pyproject.toml
pkgs/code-cli/code_cli/: cli.py  config_file.py  git.py
pkgs/code-cli/tests/: test_config_file.py  test_e2e.py
src/code_cli/: application.py
src/code_cli/commands/: git.py  git_args.py
src/code_cli/config/: local.py  profile.py
